# algorithms

./: CMakeLists.txt  README.md
algorithms/: CMakeLists.txt  kmp.cpp  kmp.hpp
tests/: CMakeLists.txt  test_kmp.cpp
